--- a/Themes/EmojiReplace/EmojiReplace.theme.css
+++ b/Themes/EmojiReplace/EmojiReplace.theme.css
@@ -39,6 +39,6 @@
 
 /*										   REPLACE THIS			*/
 /*										     ↓↓↓↓↓			*/
-@import url(https://Telejaba.github.io/BetterDiscordAddons/Themes/EmojiReplace/base/Apple.css);
+@import url(https://raw.githubusercontent.com/Telejaba/BetterDiscordAddons/refs/heads/master/Themes/EmojiReplace/base/Apple.css);
 /*										     ↑↑↑↑↑		  	*/
 /*										   REPLACE THIS			*/
